# backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.scripts  README.md  build.sh  docker-compose.yaml  fly.toml  manage.py  nginx.conf  pyproject.toml  render.yaml  requirements.txt
entrypoint/: tier_list.sh  web.sh
scripts/: champion_avatars.py  champion_statistic_scraper.py  champions.py  champions_scraper.py  scraper.py  tier_list.py
tamedrift/: api.py  asgi.py  settings.py  urls.py  wsgi.py
tamerift/: asgi.py  settings.py  urls.py  wsgi.py
wildrift_cn/: admin.py  api.py  apps.py  catalog.py  models.py  schema.py  serializers.py  urls.py  views.py
wildrift_cn/migrations/: 0001_initial.py  0002_alter_championstatistic_appear_pct_and_more.py  0002_remove_hero_id_alter_hero_heroid_and_more.py  0003_rename_championstatistic_tierlist.py  0004_alter_champion_heroid.py  0005_alter_champion_heroid_alter_tierlist_id.py
